:boom: add code for creating a character and saveing it to the DOM.
Co-authored-by: James Wyn <thisisjameswyn@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <button class="btn btn-success mt-3">Create Character</button>
       </form>
     </div>
-    <div class="card">
+    <div class="card mt-5" id="current-stats">
       <p id="name-output"></p>
       <p id="class-output"></p>
       <p id="strength-output"></p>
